# twitch-dashboard

./: .gitignore  LICENSE.md  Makefile  README.md
server/: Cargo.toml  conf.ini.example
server/src/: build.rs  handlers.rs  lib.rs  main.rs
src/: lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  package-lock.json  package.json  webpack.config.js
web/src/: index.html  index.js  index.jsx  routes.jsx
web/src/api/: Account.js  Chat.js  Config.js
web/src/components/: LoadingIndicator.jsx  app.jsx  article.jsx  blog.jsx  box.jsx  cards.jsx  document.jsx  nav.jsx  showcase.jsx  subscribe.jsx
web/src/layouts/: default.jsx
web/src/pages/: Chat.js  Login.js
web/src/routes/: about.jsx  article.jsx  chat.jsx  home.jsx  imprint.jsx  index.js  sidebar.js
web/src/utils/: config.js
www/: bootstrap.js  index.html  package-lock.json  package.json  tailwind.config.js  template.html  webpack.config.js
www/src/: index.jsx  routes.jsx  site.jsx
www/src/components/: markdown.jsx  nav.jsx  profile.jsx  skills.jsx
www/src/layouts/: default.jsx
www/src/routes/: blog.jsx  home.jsx
