[package]
name = "twitch-dashboard-server"
version = "0.1.0"
authors = ["Peter Heiss <peter.heiss@uni-muenster.de>"]
edition = "2018"
build = "src/build.rs"

[dependencies]
twitch_api2 = "0.4.1" # https://github.com/Emilgardis/twitch_api2/blob/master/examples/client.rs
twitch_oauth2 = "0.4.1" # https://github.com/Emilgardis/twitch_oauth2/blob/master/examples/user_token.rs
twitchchat = { version = "0.14", features = ["async"] } # https://github.com/museun/twitchchat/blob/master/examples/include/mod.rs
actix-rt = "1.1.1"
actix-web = "3" # https://actix.rs/docs/getting-started/
notify-rust = "4" # https://github.com/hoodie/notify-rust/tree/master/examples
diesel = "1.4.5" # https://diesel.rs/guides/getting-started/
actix-web-static-files = "3.0" # https://docs.rs/actix-web-static-files/3.0.4/actix_web_static_files/
elliptic-curve = "0.8.1" # https://docs.rs/elliptic-curve/0.8.1/elliptic_curve/
rust-ini = "0.16.0"
serde = { version = "1.0.118", features = ["derive"] }

[build-dependencies]
actix-web-static-files = "3.0"

[profile.release]
opt-level = 3